--- a/hamid/index.html
+++ b/hamid/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-    <title>DEMO</title>
+    <title>Hamid</title>
     <meta charset=UTF-8>
     <link rel="stylesheet " href="styles.css ">
+    <link rel="icon" href="./img/uppar.jpg">
 </head>
 
 <body>
