--- a/hamid/index.html
+++ b/hamid/index.html
@@ -5,7 +5,7 @@
     <title>Hamid</title>
     <meta charset=UTF-8>
     <link rel="stylesheet " href="styles.css ">
-    <link rel="icon" href="./img/uppar.jpg">
+    <link rel="icon" href="./img/uppar.jpg" type="image/gif">
 </head>
 
 <body>
